Remove jvm.config to allow for JDK 8
Signed-off-by: Ryan Nett <JNett96@gmail.com>